# Ipcpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Ipcpp.sln  README.md
Ipcpp/: CMakeLists.txt  TestApp.cpp  ipcsocket.h  ipcsocket.hpp
Ipcpp.lib/: Ipcpp.lib.vcxproj  Ipcpp.lib.vcxproj.filters  ipcsocket.hpp
